# Sync-Shopify-2.0

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/shopify/: assets_management.rs  get_assets.rs  mod.rs  requests.rs  sync.rs
src/utils/: mod.rs  run_safely.rs  theme.rs
