[package]
name = "syncshopify2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
tokio = { version = "1", features = ["full"] }
md5 = "0.7.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
clap = { version = "3.1.3", features = ["derive"] }
indicatif = "0.16.2"